доверстал главную страницу

--- a/index.html
+++ b/index.html
@@ -107,13 +107,109 @@
       </div>
     </section>
 
+    <section class="about-us">
+      <div class="about-us__inner-wrapper">
+        <h2 class="about-us__title">Коротко о нас:</h2>
+        <div class="advantages-wrapper">
+          <div class="about-us__advantage about-us__advantage_1">Экологически чистые материалы</div>
+          <div class="about-us__advantage about-us__advantage_2">Скандинавский стиль по российской цене</div>
+          <div class="about-us__advantage about-us__advantage_3">Увеличивает лайки на фотографиях</div>
+          <div class="about-us__advantage about-us__advantage_4">Связано вручную с любовью и умилением</div>
+          <div class="about-us__advantage about-us__advantage_5">Поддержка отечественного производителя</div>
+          <div class="about-us__advantage about-us__advantage_6">Поставляется в подарочной упаковке</div>
+        </div>
+      </div>
+    </section>
 
+    <section class="responses">
+      <div class="responses__inner-wrapper">
+
+        <h2 class="responses__title">Отзывы</h2>
+        <div class="responses__visible">
+          <div class="responses__container">
+            <div class="responses__response">
+              <p class="responses__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <b class="responses__author-name">Елена Смакова</b>
+              <span class="responses__nik">@smakkel</span>
+            </div>
+            <div class="responses__response">
+              <p class="responses__content">Facere incidunt omnis facilis rem repellat ex sunt, error magnam maiores ea iure molestiae commodi itaque labore, cum eligendi laudantium! Adipisci, et.Facere incidunt omnis facilis rem repellat ex sunt, error magnam maiores ea iure molestiae commodi itaque labore, cum eligendi laudantium! Adipisci, et.Facere incidunt omnis facilis rem repellat ex sunt, error magnam maiores ea iure molestiae commodi itaque labore, cum eligendi laudantium! Adipisci, et.Facere incidunt omnis facilis rem repellat ex sunt, error magnam maiores ea iure molestiae commodi itaque labore, cum eligendi laudantium! Adipisci, et.</p>
+              <b class="responses__author-name">Анна Круглова</b>
+              <span class="responses__nik">@ankrug</span>
+            </div>
+            <div class="responses__response">
+              <p class="responses__content"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <b class="responses__author-name">Светлана Васечкина</b>
+              <span class="responses__nik">@vassve</span>
+            </div>
+          </div>
+          <div class="responses__ctrls">
+            <button type="button" class="responses__ctrl responses__ctrl_prev" onclick="plusRsponsesSlide(-1)"></button>
+            <button type="button" class="responses__ctrl responses__ctrl_next" onclick="plusRsponsesSlide(1)"></button>
+          </div>
+        </div>
+        <button type="button" class="responses__add-btn ghost-btn">Написать</button>
+
+      </div>
+    </section>
+
+    <section class="contacts">
+      <div class="contacts__inner-wrapper">
+        <div class="contacts__flex-wrapper">
+          <h2 class="contacts__title">Контакты</h2>
+          <div class="contacts__content">
+            <div class="contacts__email">
+              <div class="first-col">
+                e-mail:
+              </div>
+              <div>
+                <a class="common-link" href="#">info@mimimishkashop.ru</a>
+              </div>
+            </div>
+            <div class="contacts__adress">
+              <div class="first-col">
+                адрес:
+              </div>
+              <div>
+                г. Санкт-Петербург,<br>
+                ул. Большая Конюшенная,<br>
+                д. 19/8, офис 101
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="contacts__visible-map">
+          <div id="yandex-map"></div>
+        </div>
+
+        <button type="button" class="contacts__feedback-btn ghost-btn">Напишите нам</button>
+      </div>
+    </section>
 
   </main>
 
-
-
+  <footer class="page-footer">
+    <div class="page-footer__inner-wrapper">
+      <a class="page-footer__logo" href="index.html">
+        <img src="img/logo-footer.png" alt="MISHKA">
+      </a>
+      <div class="page-footer__social-wrapper">
+        <div class="social">
+          <a href="#" class="social-btn social-btn_inst">instagram</a>
+          <a href="#" class="social-btn social-btn_fb">facebook</a>
+          <a href="#" class="social-btn social-btn_twit">twitter</a>
+        </div>
+      </div>
+      <div class="page-footer__copyright">
+        Разработано
+        <a href="#" class="page-footer__copyright-logo">
+          <img src="img/copyright-logo.png" alt="htmlacademy">
+        </a>
+      </div>
+    </div>
+  </footer>
 
 </body>
+<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2f2015de3bdf8f32cad1765a21b809efd15fd6a94e17dad89c8394fe5f562bdf&amp;width=100%25&amp;height=455&amp;lang=ru_RU&amp;scroll=true&id=yandex-map"></script>
 <script src="js/javascript.js"></script>
 </html>
