сверстал страницу form

--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
           <a href="catalog.html">Каталог товаров</a>
         </li>
         <li class="main-nav__item main-nav__item_order">
-          <a href="#">Вязание на заказ</a>
+          <a href="form.html">Вязание на заказ</a>
         </li>
       </ul>
 
